# MriaSchedule

./: README.md  choice-cache.txt  mria-config.txt  pyproject.toml  ~$Партнёры.xlsx  Партнёры.xlsx  Размеченная_программа.xlsx  Расписание_09_03_2026_22_20_49.xlsx  Расписание_09_03_2026_22_31_04.xlsx  Расписание_09_03_2026_22_33_44.xlsx
mria_scheduler/: __init__.py  cli.py  config_cache.py  excel_parser.py  matching.py  models.py  output_writer.py
mria_scheduler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
